<resources>
    <string name="app_name">CNC Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="converter">Converter mm/inch</string>
    <string name="about">About</string>
    <string name="standard_calc">Standard Calculator</string>
    <string name="cnc_calc">CNC Calculator</string>
    <string name="calc_formulas">Calculation Formulas</string>
    <string name="info">Information</string>
    <string name="gcodes">G Codes</string>
    <string name="calculations">Calculations</string>
    <string name="settings">Settings</string>
    <string name="threads">Threads</string>
    <string name="tolerances">Fitting Tolerances</string>
    <string name="current_tab">You are currently in this tab</string>
    <string name="title_activity_settings">Settings</string>
    <string name="made_by">Made by JitakuLab</string>
    <string name="note_about">Note: This application was created for self-development purposes, therefore not all functions may work properly and may also contain errors for which I am sorry. In the future, I would like this application to be fully functional and useful for its users, so if you have any comments please contact me at jitakulab@gmail.com</string>
    <string name="send_mail">Send me an e-mail</string>
    <string name="rights">All rights reserved</string>
    <string name="other">Other</string>
</resources>
